--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,35 +6,38 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "axios": "^1.6.0",
-    "plotly.js": "^2.27.0",
+    "@ant-design/icons": "^5.5.1",
+    "antd": "^5.22.2",
+    "axios": "^1.7.7",
+    "classnames": "^2.5.1",
+    "dayjs": "^1.11.13",
+    "framer-motion": "^11.18.2",
+    "lodash": "^4.17.21",
+    "plotly.js": "^2.35.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-plotly.js": "^2.6.0",
-    "antd": "^5.12.0",
-    "@ant-design/icons": "^5.2.0",
-    "zustand": "^4.4.0",
-    "dayjs": "^1.11.0",
-    "lodash": "^4.17.0",
-    "classnames": "^2.3.0"
+    "react-router-dom": "^6.28.0",
+    "styled-components": "^6.1.13",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@types/plotly.js": "^2.12.0",
-    "@types/lodash": "^4.14.0",
-    "@vitejs/plugin-react": "^4.1.0",
-    "vite": "^5.0.0",
-    "eslint": "^8.53.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.0",
-    "typescript": "^5.2.0"
+    "@eslint/js": "^9.15.0",
+    "@types/lodash": "^4.17.13",
+    "@types/plotly.js": "^2.29.4",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.3",
+    "eslint": "^9.15.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.12.0",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.15.0",
+    "vite": "^6.0.1"
   }
 }
