--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,8 +4,16 @@ pydantic>=2.5.0
 pydantic-settings>=2.1.0
 python-multipart>=0.0.6
 aiofiles>=23.2.1
+aiohttp>=3.9.0
 websockets>=12.0
 pandas>=2.2.0
 numpy>=1.26.0
 python-dateutil>=2.8.2
 joblib>=1.3.2
+
+# 数据库相关依赖
+sqlalchemy>=2.0.0
+alembic>=1.13.0
+asyncpg>=0.29.0  # PostgreSQL异步驱动
+aiosqlite>=0.19.0  # SQLite异步驱动
+psycopg2-binary>=2.9.0  # PostgreSQL同步驱动（备用）
